2015-10-22  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_hrect/ismember.m: Fix two bugs

	* arrays/@stk_hrect/ismember.m: Fix a bug that prevented ismember
	from working on more than one point at a time, and another bug
	in the case where B is not an stk_hrect object (it was incorrectly
	assumed to be an stk_dataframe in this case).

2015-10-11  Julien Bect  <julien.bect@centralesupelec.fr>

	mole/matlab/file_in_path.m: Fix two bugs

	* misc/mole/matlab/file_in_path.m: Fix two bugs.

2015-10-10  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_example_doe03.m: Use the appropriate flag for maximization

	* examples/02_design_of_experiments/stk_example_doe03.m: Use the
	appropriate flag for maximization. Also, use stk_plot1d for the
	upper panel plot to display pointwise credible intervals.

2015-09-30  Julien Bect  <julien.bect@centralesupelec.fr>

	Bring Octave's sqp inside STK.

	* misc/optim/@stk_optim_octavesqp/private/sqp_quadprog.m: New
	function based on Octave's sqp function, with minor modifications
	to be usable under Matlab with quadprog instead of qp.
	* misc/optim/@stk_optim_octavesqp/stk_optim_octavesqp.m: Complete
	rewrite. A 'qp_solver' option is added for the choice between 'qp',
	which is Octave's core qp solver, and 'quadprog', which is
	available from Mathworks' Optimization toolbox or from MOSEK.
	* misc/optim/@stk_optim_octavesqp/stk_minimize_boxconstrained.m:
	Make it possible to use either Octave's sqp or our sqp_quadprog (a
	handle to the function to be used is stored in algo.sqp).
	* misc/optim/@stk_optim_fmincon/stk_optim_fmincon.m: Do not try to
	check if fmincon is present or not (this can be done using
	stk_optim_testmin_box).
	* misc/optim/stk_optim_testmin_box.m: Simple test to check that a
	given box-constrained optimizer actually works.
	* misc/optim/stk_optim_testmin_unc.m: Simple test to check that a
	given unconstrained optimizer actually works.
	* misc/optim/stk_optim_hasfmincon.m: Deprecated function..